# timeSpace

./: .flake8  .gitignore  CITATION.cff  CONVENTIONS.md  LICENSE  Makefile  README.md  __init__.py  calculations.py  constants.py  data_processing.py  etl.py  label_collision.py  measurements.py  plotting.py  plotting_helpers.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/: .gitignore
data/datasets/: desert_farm_leverage_points.csv  ecological_scales.csv  microbial_processes.csv  models.csv  scale_popout_boxes.csv  stommel_boyd2015.csv  stommel_boyd2015_volumes.csv  stommel_boyd2015_volumes_hbw.csv  time_space_reference_objects.csv  us_measurements.csv  us_processes.csv  workshop_measurements_feb2025.csv
data/references/: README.md  bionumbers_subset.csv  phototroph_growth_supplementary.csv
docs/: build_demo_boyd.py  build_desert_farm.py  build_desert_farm_summary.py  build_explorer.py  demo_stommel_boyd.html  desert_farm_colab.ipynb  desert_farm_processes.csv  desert_farm_stommel.html  desert_farm_summary.html  explorer.html
projects/: figure_global_scales.ipynb  globe_panel.py  prime_annual_measurements.py  prime_monthly.py  prime_regional_EU.py  prime_regional_US.py  prime_regional_combo.py  simplified_stommel.py
tests/: test_calculations.py  test_constants.py  test_demo.py  test_etl.py  test_etl_validation.py  test_label_collision.py  test_label_overlap.py  test_local_install.py  test_measurements.py  test_plotting.py  test_plotting_helpers.py
